@@ -10,7 +10,7 @@
  */
 ?>
 <div class="dashboard-left">
-  <h3 class="dashboard-title">Create new...</h3>
+  <h3 class="dashboard-title"><?php print t('Create new') . '...'; ?></h3>
   <div class="dashboard-entry clear-block">
     <div class="dashboard-text">
       <div class="dashboard-link">
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <h3 class="dashboard-title">Manage mini panels...</h3>
+  <h3 class="dashboard-title"><?php print t('Manage mini panels') . '...'; ?></h3>
   <div class="dashboard-minis">
     <?php print $minis; ?>
     <div class="links">
@@ -55,7 +55,7 @@
 </div>
 
 <div class="dashboard-right">
-  <h3 class="dashboard-title">Manage pages...</h3>
+  <h3 class="dashboard-title"><?php print t('Manage pages') . '...'; ?></h3>
   <div class="dashboard-pages">
     <?php print $pages; ?>
     <div class="links">
